17/01/2020 - Add more control on produced SVG images

16/01/2020 - Add 3D SVG export
           - Correction of the colormap to enhance the higher value

14/01/2020 - Add SVG export with interpolated colors

13/01/2020 - Add ColorMap class to compute color maps
           - Add export to Averaged SVG color plot

10/01/2020 - New classes to export 2D Vector graphic mesh to SVG file (first version)

09/01/2020 - Update of Taylor-Axi, Taylor-3D and BarNecking-Axi samples (add to documentation) 

07/01/2020 - Parallelization procedure with One core by default

19/12/2019 - Modification of Time History Saves to include initial state
           - Replaced list of Domain by Model class (update of the samples)
           - Replaced the result files write procedure to remove spurious oscillations
           
12/12/2019 - First commit of sources, documentation and samples files