@@ -52,6 +52,7 @@ public:
   double nextTime = 0.0;            //!< Temps actuel du modele + increment de temps
   List<ElementSet *> elementsSets;  //!< List of the Elements Sets
   List<HistoryFile *> historyFiles; //!< List of the History Files
+  List<Material *> materials;       //!< Materials list of the structure
   List<NodeSet *> nodesSets;        //!< List of the Nodes Sets
   ListIndex<Element *> elements;    //!< List of the Elements
   ListIndex<Node *> nodes;          //!< List of the Nodes
